--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -9,9 +9,18 @@
 <body>
   <ul>
     <% for(var i= 0;i<messages.length;i++ ){ %>
-        <li><%= messages[i].title %> </li>
+        <li><a href="/messages/<%=messages[i].id%>"><%= messages[i].title %> </a></li>
     <% } %>
   </ul>
+
+  <h2>Write a Message</h2>
+  <form action="/messages" method="post">
+    <input type="text" name="title" value="Add Title">
+    <br>
+    <br>
+    <textarea name="body" rows="8" cols="80"></textarea>
+    <input type="submit" value="Submit">
+  </form>
 
 </body>
 </html>
