--- a/views/message.ejs
+++ b/views/message.ejs
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <link rel="stylesheet" href="/css/style.css">
   <title><%= message.title %></title>
 </head>
 <body>
+  <div id="header">
+    <a href="/">HOME</a>
+  </div>
 
     <h1 contenteditable="true" name='title' id="title" ><%= message.title %> </h1>
     <p contenteditable="true" name="body" id="message"><%= message.body %> </p>
@@ -18,7 +21,7 @@
     <input type="submit" value="Update">
   </form>
 
-  <a href="/delete/messages/<%= message.id %>">Delete This Note</a>
+  <a href="/delete/messages/<%= message.id %>" id="deleteButton">Delete This Note</a>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/message.js" charset="utf-8"></script>
 </body>
