--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -4,12 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Messages</title>
 </head>
 <body>
-  <ul>
+  <div id="header">
+    <a href="/">HOME</a>
+  </div>
+
+  <h1 id="messageHeader">Messages</h1>
+  <ul id="messageList">
     <% for(var i= 0;i<messages.length;i++ ){ %>
-        <li><a href="/messages/<%=messages[i].id%>"><%= messages[i].title %> </a></li>
+        <li><a href="/messages/<%=messages[i].id%>" ><%= messages[i].title %> </a></li>
     <% } %>
   </ul>
 
@@ -19,7 +25,7 @@
     <br>
     <br>
     <textarea name="body" rows="8" cols="80"></textarea>
-
+    <input type="submit" name="" value="Create New Message">
   </form>
 
 
